--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -174,6 +174,7 @@
     @*<script src="~/lib/jquery/dist/jquery.min.js"></script>*@
     <script src="~/lib/njpui/js/plugins.js"></script>
     <script src="~/lib/njpui/js/theme.js"></script>
+    <script src="~/lib/summernote/js/summernote-lite.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
